--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,23 @@
-<h1> This is my Header</h1>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link <%= title === 'Home' ? 'active' : '' %>" href="/" data-page="">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link <%= title === 'Contact' ? 'active' : '' %>" href="/contact" data-page="contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link <%= title === 'About' ? 'active' : '' %>" href="/about" data-page="about">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
