--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,10 +8,11 @@
         <%= title %>
     </title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href='/css/style.css'>
 </head>
 
 <body>
-    <header style="background-color: red;">
+    <header>
         <%- include('../partials/header') %>
     </header>
 
@@ -19,7 +20,7 @@
         <%- body %>
     </main>
 
-    <footer style="background-color: blue;">
+    <footer>
         <%- include('../partials/footer') %>
     </footer>
 </body>
