--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,186 @@
 <main>
-    <div id="content">
-        <h2>CONTACT</h2>
-    </div>
+    <section id="contact" class="contact">
+        <div class="container">
+
+            <div class="section-title">
+                <h2 class="title">Contact</h2>
+                <hr style=" width: 100px; margin-left: 0;border:1px solid #149ddd">
+                <p>Seeking solutions, we open doors to mutual understanding and ongoing progress.</p>
+            </div>
+
+            <div class="row" data-aos="fade-in">
+
+                <div class="col-lg-5 d-flex align-items-stretch">
+                    <div class="info">
+                        <div class="repository mb-4">
+                            <i class="bi bi-github"></i>
+                            <h4>Repository:</h4>
+                            <a href="https://github.com/joaopedrocalencar">My GitHub</a>
+                        </div>
+
+                        <div class="email">
+                            <i class="bi bi-envelope"></i>
+                            <h4>Email:</h4>
+                            <p>joaopedroalencar@hotmail.com</p>
+                        </div>
+
+                        <div class="phone">
+                            <i class="bi bi-phone"></i>
+                            <h4>Call:</h4>
+                            <p>+1 5589 55488 55s</p>
+                        </div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32616.599185001523!2d-79.63368790002018!3d43.732835697373226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3a5391c12321%3A0x747f0c3b5cdecaa0!2sHumber%20College!5e0!3m2!1spt-BR!2sbr!4v1709675266897!5m2!1spt-BR!2sbr"
+                            frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-6 d-flex align-items-stretch margin">
+                    <div class="form">
+                        <form>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <label for="firstName" class="form-label">First Name</label>
+                                    <input type="text" class="form-control" id="firstName"
+                                        placeholder="Enter your first name" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="email" class="form-label">Your Email</label>
+                                    <span data-bs-toggle="tooltip" data-bs-placement="top"
+                                        title="We'll never share your email with anyone else."
+                                        style="width: auto; height: auto;">
+                                        <i class="bi bi-info-circle-fill" style="font-size: 1rem;"></i>
+                                    </span>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter your email"
+                                        required>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="subjet" class="form-label">Subject</label>
+                                <input type="text" class="form-control" id="subject" placeholder="Enter the subject">
+                            </div>
+                            <div class="mb-3">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea class="form-control" id="message" rows="5"></textarea>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="check">
+                                <label class="form-check-label" for="check">I'm from Canada</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </main>
+<style>
+    .margin {
+        margin-left: 8%;
+    }
+
+    .contact {
+        padding-bottom: 130px;
+    }
+
+    .contact .form {
+        padding: 30px;
+        background: #fff;
+        width: 100%;
+        box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    .contact .info {
+        padding: 30px;
+        background: #fff;
+        width: 100%;
+        box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    .contact .form i{
+        color: #149ddd;
+        cursor: pointer;
+    }
+
+    .contact .info i {
+        font-size: 20px;
+        color: #149ddd;
+        float: left;
+        width: 44px;
+        height: 44px;
+        background: #dff3fc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .contact .info h4 {
+        padding: 0 0 0 60px;
+        font-size: 22px;
+        font-weight: 600;
+        margin-bottom: 5px;
+        color: #050d18;
+    }
+
+    .contact .info a {
+        padding: 0 0 10px 15px;
+        font-size: 14px;
+        color: #173b6c;
+    }
+
+    .contact .info .email a {
+        padding-top: 5px;
+    }
+
+    .contact .info p {
+        padding: 0 0 10px 60px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        color: #173b6c;
+    }
+
+    .contact .info .email p {
+        padding-top: 5px;
+    }
+
+    .contact .info .social-links {
+        padding-left: 60px;
+    }
+
+    .contact .info .social-links a {
+        font-size: 18px;
+        display: inline-block;
+        background: #333;
+        color: #fff;
+        line-height: 1;
+        padding: 8px 0;
+        border-radius: 50%;
+        text-align: center;
+        width: 36px;
+        height: 36px;
+        transition: 0.3s;
+        margin-right: 10px;
+    }
+
+    .contact .info .social-links a:hover {
+        background: #149ddd;
+        color: #fff;
+    }
+
+    .contact .info .email:hover i,
+    .contact .info .address:hover i,
+    .contact .info .phone:hover i {
+        background: #149ddd;
+        color: 
+        #fff;
+    }
+    .contact .section-title .title{
+        color: #9210ac;
+        font-weight: bold;
+    }
+</style>
