--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,6 +8,10 @@
         <%= title %>
     </title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href='/css/style.css'>
 </head>
 
@@ -25,6 +29,9 @@
     </footer>
 </body>
 <script>
+    $(document).ready(function () {
+        $('[data-bs-toggle="tooltip"]').tooltip();
+    });
 </script>
 <style>
     .navbar-nav .nav-item .nav-link.active {
