--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,95 @@
-<div id="content">
-    <h2>ABOUT</h2>
-</div>
+<main>
+    <section id="about" class="about">
+        <div class="container">
+
+            <div class="section-title">
+                <h2 class="title">About</h2>
+                <hr style=" width: 100px; margin-left: 0;border:1px solid #149ddd">
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4" data-aos="fade-right">
+                    <img src="images/photo.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                    <h3>Designer &amp; Web Developer.</h3>
+                    <p class="fst-italic">
+                        Here's some information about me. If you're interested, feel free to reach out to me through the contact page.
+                    </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                                    <span>localhost:8080/</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456
+                                        7890</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Toronto,
+                                        CA</span></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                                    <span>joaopedroalencar@hotmail.com</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
+                                    <span>Available</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p>
+                        I'm a web front-end developer. My favorite technologies is: Node.js, Vue.js, Bootstrap, jQuery.
+                    </p>
+                    <div width="700px" height="100%">
+                        <img src="https://skillicons.dev/icons?i=js,nodejs,html,css,sass,bootstrap,git" />
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <style>
+        .about .content h3 {
+            font-weight: 700;
+            font-size: 26px;
+            color: #9210ac;
+        }
+
+        .about .content ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .about .content ul li {
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+
+        .about .content ul strong {
+            margin-right: 10px;
+        }
+
+        .about .content ul i {
+            font-size: 16px;
+            margin-right: 5px;
+            color: #149ddd;
+            line-height: 0;
+        }
+
+        .about .content p:last-child {
+            margin-bottom: 0;
+        }
+        .about .section-title .title{
+        color: #9210ac;
+        font-weight: bold;
+        }
+    </style>
+</main>
