--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,7 +17,8 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Designer &amp; Web Developer.</h3>
                     <p class="fst-italic">
-                        Here's some information about me. If you're interested, feel free to reach out to me through the contact page.
+                        Here's some information about me. If you're interested, feel free to reach out to me through the
+                        contact page.
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
@@ -54,6 +55,42 @@
             </div>
 
         </div>
+
+        <div class="row facts mt-5 d-flex justify-content-center">
+
+            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+                <div class="count-box">
+                    <i class="bi bi-emoji-smile"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="2"
+                        class="purecounter"></span>
+                    <p><strong>Happy Clients</strong> satisfied customers</p>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="count-box">
+                    <i class="bi bi-journal-richtext"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="2"
+                        class="purecounter"></span>
+                    <p><strong>Projects</strong> I was involved in</p>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+                <div class="count-box">
+                    <i class="bi bi-people"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="2"
+                        class="purecounter"></span>
+                    <p><strong>Hard Workers</strong> just me</p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <script>
+
+        </script>
     </section>
     <style>
         .about .content h3 {
@@ -87,9 +124,58 @@
         .about .content p:last-child {
             margin-bottom: 0;
         }
-        .about .section-title .title{
-        color: #9210ac;
-        font-weight: bold;
+
+        .about .section-title .title {
+            color: #9210ac;
+            font-weight: bold;
+        }
+
+        .facts {
+            padding-bottom: 30px;
+        }
+
+        .facts .count-box {
+            padding: 30px;
+            width: 100%;
+        }
+
+        .facts .count-box i {
+            display: block;
+            font-size: 44px;
+            color: #149ddd;
+            float: left;
+            line-height: 0;
+        }
+
+        .facts .count-box span {
+            font-size: 48px;
+            line-height: 40px;
+            display: block;
+            font-weight: 700;
+            color: #050d18;
+            margin-left: 60px;
+        }
+
+        .facts .count-box p {
+            padding: 15px 0 0 0;
+            margin: 0 0 0 60px;
+            font-family: "Raleway", sans-serif;
+            font-size: 14px;
+            color: #122f57;
+        }
+
+        .facts .count-box a {
+            font-weight: 600;
+            display: block;
+            margin-top: 20px;
+            color: #122f57;
+            font-size: 15px;
+            font-family: "Poppins", sans-serif;
+            transition: ease-in-out 0.3s;
+        }
+
+        .facts .count-box a:hover {
+            color: #1f5297;
         }
     </style>
 </main>
