--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -62,7 +62,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="message" class="form-label">Message</label>
-                                <textarea class="form-control" id="message" rows="5"></textarea>
+                                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="check">
