--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,6 +12,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <link rel="stylesheet" type="text/css" href='/css/style.css'>
 </head>
 
@@ -32,6 +36,9 @@
     $(document).ready(function () {
         $('[data-bs-toggle="tooltip"]').tooltip();
     });
+    //initialize libraries
+    new PureCounter();
+    AOS.init();
 </script>
 <style>
     .navbar-nav .nav-item .nav-link.active {
