--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -15,8 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+    
     <link rel="stylesheet" type="text/css" href='/css/style.css'>
+    <script src="/public/js/contactSubmission.js"></script>
+
 </head>
 
 <body>
