exibe mensagem enviada no contact form

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -39,6 +39,7 @@
                 <div class="col-lg-6 d-flex align-items-stretch margin">
                     <div class="form">
                         <form>
+                            <div id="messageConfirmation"></div>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="firstName" class="form-label">First Name</label>
@@ -68,7 +69,8 @@
                                 <input type="checkbox" class="form-check-input" id="check">
                                 <label class="form-check-label" for="check">I'm from Canada</label>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
+                            
                         </form>
                     </div>
                 </div>
