mensagem em ingles

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -27,7 +27,7 @@
                         <div class="phone">
                             <i class="bi bi-phone"></i>
                             <h4>Call:</h4>
-                            <p>+1 5589 55488 55s</p>
+                            <p>+1 437 580 3009</p>
                         </div>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32616.599185001523!2d-79.63368790002018!3d43.732835697373226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3a5391c12321%3A0x747f0c3b5cdecaa0!2sHumber%20College!5e0!3m2!1spt-BR!2sbr!4v1709675266897!5m2!1spt-BR!2sbr"
@@ -39,7 +39,7 @@
                 <div class="col-lg-6 d-flex align-items-stretch margin">
                     <div class="form">
                         <form>
-                            <div id="messageConfirmation"></div>
+                            <div class="textMessageConfirmation" id="messageConfirmation"></div>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="firstName" class="form-label">First Name</label>
@@ -184,5 +184,9 @@
     .contact .section-title .title{
         color: #9210ac;
         font-weight: bold;
+    }
+    .textMessageConfirmation{
+        background-color: #e8d0ed;
+        margin: 10px;
     }
 </style>
