--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -186,7 +186,9 @@
         font-weight: bold;
     }
     .textMessageConfirmation{
-        background-color: #e8d0ed;
+        background-color: #f5dbfb;
         margin: 10px;
+        font-weight:500;
+        font-size: 18px;
     }
 </style>
