--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,21 +1,21 @@
 <div class="container">
     <div class="footer-columns">
       <div class="footer-column">
-        <h3>Sobre Mim</h3>
-        <p>Descrição breve sobre você ou sua jornada como desenvolvedor.</p>
+        <h3>Mission</h3>
+        <p>Crafting seamless web experiences with a blend of aesthetics and functionality, I'm here to turn your digital visions into reality.</p>
       </div>
       <div class="footer-column">
-        <h3>Links Rápidos</h3>
+        <h3>Quick links</h3>
         <ul>
-          <li><a href="/">Início</a></li>
-          <li><a href="/portfolio.html">Portfólio</a></li>
-          <li><a href="/contact.html">Contato</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
       <div class="footer-column">
-        <h3>Contato</h3>
-        <p>Email: seuemail@example.com</p>
-        <p>Telefone: (XX) XXXXX-XXXX</p>
+        <h3>Get in touch</h3>
+        <p>Email: joaopedroalencar@hotmail.com</p>
+        <p>Telefone: +1 (437) 580-3009</p>
       </div>
       <div class="footer-column">
         <h3>Siga-me</h3>
