--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,15 @@ footer {
   .footer-columns {
     display: flex;
     justify-content: space-between;
+    gap: 100px;
     
   }
   
+  .footer-column {
+    flex: 1; /* Faz com que cada coluna ocupe uma fração igual do container */
+    min-width: 0; /* Permite que as colunas encolham abaixo de seu conteúdo, se necessário */
+  }
+
   .footer-column h3 {
     margin-bottom: 15px;
   }
@@ -34,7 +40,7 @@ footer {
   .container {
     width: 80%;
     margin: auto;
-    max-width: 1200px;
+    max-width: 1300px;
   }
   
   @media (max-width: 768px) {
