--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,10 +15,10 @@
       <div class="footer-column">
         <h3>Get in touch</h3>
         <p>Email: joaopedroalencar@hotmail.com</p>
-        <p>Telefone: +1 (437) 580-3009</p>
+        <p>Phone: +1 (437) 580-3009</p>
       </div>
       <div class="footer-column">
-        <h3>Siga-me</h3>
+        <h3>Media</h3>
         <p>Links para suas redes sociais.</p>
       </div>
     </div>
