--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <main>
-    <section id="about" class="about">
+    <section id="about" class="about" style="margin-top: 2.8%;">
         <div class="container">
 
             <div class="section-title">
