--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,84 @@
 <main>
-    <h1>Página Home</h1>
-    <p>Este é o conteúdo da página Home.</p>
+    <!-- ======= Hero Section ======= -->
+    <section id="home" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="home-content" data-aos="fade-in">
+            <h1 id="name">Joao Pedro</h1>
+            <p class="underName">I'm <span class="typed"></span></p>
+        </div>
+    </section><!-- End Hero -->
 </main>
+<script>
+    var typed = new Typed('.typed', {
+      strings: ['Web Designer.', 'Web Developer.', 'Freelancer'],
+      typeSpeed: 50,
+    });
+</script>
+<style>
+    #home {
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        background: url("images/photo.jpg") top center;
+        background-size: contain;
+        z-index: 1;
+    }
+
+    #home:before {
+        content: "";
+        background: rgba(5, 13, 24, 0.3);
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    #home .home-content {
+        position: relative;
+        z-index: 2;
+        min-width: 300px;
+        margin-left: 25%;
+    }
+
+    #home #name {
+        margin: 0 0 10px 0;
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 56px;
+        color: #fff;
+    }
+
+    #home .underName {
+        color: #fff;
+        margin-bottom: 50px;
+        font-size: 26px;
+        font-family: "Poppins", sans-serif;
+    }
+
+    #home .underName .typed {
+        color: #fff;
+        padding-bottom: 4px;
+        letter-spacing: 1px;
+        border-bottom: 3px solid #149ddd;
+    }
+
+    @media (min-width: 1024px) {
+        #home {
+            background-attachment: fixed;
+        }
+    }
+
+    @media (max-width: 768px) {
+        #home #name {
+            font-size: 28px;
+            line-height: 36px;
+        }
+
+        #hero h2 {
+            font-size: 18px;
+            line-height: 24px;
+            margin-bottom: 30px;
+        }
+    }
+</style>
