--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,49 +1,60 @@
-body{
-    display:flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.navbar {
+  position: fixed;
+  width: 100vw;
+  z-index: 1000;
+}
+.navbar-nav .nav-item{
+  padding-right: 10px;
+}
 
 footer {
-    margin-top: auto;
-    background-color: #333;
-    color: white;
-    padding: 20px 0;
-  }
-  
+  margin-top: auto;
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
+}
+
+.footer-columns {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.footer-column h3 {
+  margin-bottom: 15px;
+}
+
+.footer-column p,
+.footer-column ul,
+.footer-column li {
+  margin-bottom: 10px;
+  list-style: none;
+}
+
+.footer-column a {
+  color: white;
+  text-decoration: none;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
+  max-width: 1200px;
+}
+
+@media (max-width: 768px) {
   .footer-columns {
-    display: flex;
-    justify-content: space-between;
-    
+    flex-direction: column;
+    text-align: center;
   }
-  
-  .footer-column h3 {
-    margin-bottom: 15px;
-  }
-  
-  .footer-column p, .footer-column ul, .footer-column li {
-    margin-bottom: 10px;
-    list-style: none;
-  }
-  
-  .footer-column a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .container {
-    width: 80%;
-    margin: auto;
-    max-width: 1200px;
-  }
-  
-  @media (max-width: 768px) {
-    .footer-columns {
-      flex-direction: column;
-      text-align: center;
-    }
-  }
-  .title{
-    padding-top: 10px;
-  }
-  
+}
+
+.title {
+  padding-top: 10px;
+}
