--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,5 @@
 <main>
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="margin-top: 2.8%;">
         <div class="container">
 
             <div class="section-title">
@@ -63,25 +63,64 @@
                             </div>
                             <div class="mb-3">
                                 <label for="message" class="form-label">Message</label>
-                                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                                <textarea class="form-control" id="message" rows="5"
+                                    placeholder="Enter your message"></textarea>
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="check">
                                 <label class="form-check-label" for="check">I'm from Canada</label>
                             </div>
                             <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
-                            
+
                         </form>
                     </div>
                 </div>
             </div>
 
         </div>
+
+
+        <div class="toast-container position-absolute p-3 mb-5">
+            <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <i class="sucess-icon bi bi-check-circle-fill"></i>
+                    <strong class="me-auto">Sucess</strong>
+                    <small class="">just now</small>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body" id="messageConfirmation"></div>
+            </div>
+        </div>
+
+
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </main>
 <style>
     .margin {
         margin-left: 8%;
+    }
+
+    .toast-header small {
+        margin-left: 55%;
+    }
+
+    .toast-container {
+        position: absolute;
+        top: 70%;
+    }
+
+    .toast-container {
+        margin-bottom: 30%;
+    }
+
+    .sucess-icon {
+        color: #28a745;
+        padding-right: 5px;
     }
 
     .contact {
@@ -102,7 +141,7 @@
         box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
     }
 
-    .contact .form i{
+    .contact .form i {
         color: #149ddd;
         cursor: pointer;
     }
@@ -178,17 +217,19 @@
     .contact .info .address:hover i,
     .contact .info .phone:hover i {
         background: #149ddd;
-        color: 
-        #fff;
+        color:
+            #fff;
     }
-    .contact .section-title .title{
+
+    .contact .section-title .title {
         color: #9210ac;
         font-weight: bold;
     }
-    .textMessageConfirmation{
+
+    .textMessageConfirmation {
         background-color: #f5dbfb;
         margin: 10px;
-        font-weight:500;
+        font-weight: 500;
         font-size: 18px;
     }
 </style>
