--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,13 +7,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link <%= title === 'Home' ? 'active' : '' %>" href="/" data-page="">Home</a>
+                    <a class="nav-link <%= title === 'Home' ? 'active' : '' %>" href="/" data-page="">
+                        <i class="bi bi-house"></i>
+                        Home
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link <%= title === 'About' ? 'active' : '' %>" href="/about" data-page="about">About</a>
+                    <a class="nav-link <%= title === 'About' ? 'active' : '' %>" href="/about"
+                        data-page="about">
+                        <i class="bi bi-person"></i>
+                        About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link <%= title === 'Contact' ? 'active' : '' %>" href="/contact" data-page="contact">Contact</a>
+                    <a class="nav-link <%= title === 'Contact' ? 'active' : '' %>" href="/contact"
+                        data-page="contact">
+                        <i class="bi bi-envelope"></i>
+                        Contact</a>
                 </li>
             </ul>
         </div>
