--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,9 +5,7 @@
             <div class="section-title">
                 <h2 class="title">About</h2>
                 <hr style=" width: 100px; margin-left: 0;border:1px solid #149ddd">
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <p>My journey as a Web Designer and Developer has equipped me with the skills to transform ideas into digital realities. I'm here to help you make a meaningful online impact.</p>
             </div>
 
             <div class="row">
@@ -15,7 +13,7 @@
                     <img src="images/photo.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>Designer &amp; Web Developer.</h3>
+                    <h3>Web Designer &amp; Developer.</h3>
                     <p class="fst-italic">
                         Here's some information about me. If you're interested, feel free to reach out to me through the
                         contact page.
@@ -26,8 +24,7 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                                     <span>localhost:8080/</span>
                                 </li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456
-                                        7890</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (437) 580 3009</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Toronto,
                                         CA</span></li>
                             </ul>
@@ -46,7 +43,7 @@
                         </div>
                     </div>
                     <p>
-                        I'm a web front-end developer. My favorite technologies is: Node.js, Vue.js, Bootstrap, jQuery.
+                        Core technologies: Node.js, Vue.js, Bootstrap, jQuery.
                     </p>
                     <div width="700px" height="100%">
                         <img src="https://skillicons.dev/icons?i=js,nodejs,html,css,sass,bootstrap,git" />
