--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
             <div class="section-title">
                 <h2 class="title">Contact</h2>
                 <hr style=" width: 100px; margin-left: 0;border:1px solid #149ddd">
-                <p>Seeking solutions, we open doors to mutual understanding and ongoing progress.</p>
+                <p>Have a project in mind or just want to say hi? I'd love to hear from you.</p>
             </div>
 
             <div class="row" data-aos="fade-in">
