--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,7 +19,8 @@
       </div>
       <div class="footer-column">
         <h3>Media</h3>
-        <p>Links para suas redes sociais.</p>
+        <a href="https://github.com/joaopedrocalencar">My GitHub</a>
+        
       </div>
     </div>
   </div>
