--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <main>
-    <!-- ======= Hero Section ======= -->
     <section id="home" class="d-flex flex-column justify-content-center align-items-center">
         <div class="home-content" data-aos="fade-in">
             <h1 id="name">Joao Pedro</h1>
             <p class="underName">I'm <span class="typed"></span></p>
         </div>
-    </section><!-- End Hero -->
+    </section>
 </main>
 <script>
     var typed = new Typed('.typed', {
