--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -81,7 +81,7 @@
 
 
         <div class="toast-container position-absolute p-3 mb-5">
-            <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+            <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
                 <div class="toast-header">
                     <i class="sucess-icon bi bi-check-circle-fill"></i>
                     <strong class="me-auto">Sucess</strong>
