--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -80,15 +80,14 @@
         </div>
 
 
-        <div class="toast-container position-absolute p-3 mb-5">
-            <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
+        <div class="toast-container position-absolute p-3 mb-5" style="font-size: 20px;">
+            <div id="liveToast" class="toast message-toast align-items-center" role="alert" aria-live="assertive"
+                aria-atomic="true" data-delay="5000" >
                 <div class="toast-header">
                     <i class="sucess-icon bi bi-check-circle-fill"></i>
                     <strong class="me-auto">Sucess</strong>
                     <small class="">just now</small>
-                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
                 <div class="toast-body" id="messageConfirmation"></div>
             </div>
@@ -105,8 +104,15 @@
         margin-left: 8%;
     }
 
+    .message-toast {
+        font-size: 20px;
+        height: auto;
+        max-height: 250px;
+        overflow-y: auto;
+    }
+
     .toast-header small {
-        margin-left: 55%;
+        margin-left: 40%;
     }
 
     .toast-container {
